--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.460.0",
     "next": "14.2.14",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18"
   },
